# elixir-APIS

GraphQL/: go.mod  server.go
GraphQLImp/: go.mod  go.sum  gqlgen.yml  server.go
GraphQLImp/DB/: dbconn.go
GraphQLImp/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
GraphQLImp/graph/model/: models_gen.go
Grpc/: chat.proto  go.mod  server.go
REST/RestService/: .env  .gitignore  Cargo.toml
REST/RestService/migrations/2023-05-04-041126_items/: down.sql  up.sql
REST/RestService/src/: Itemops.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
REST/RestService/src/api/: item.rs  mod.rs
REST/RestService/src/api/item/: models.rs
WebSocket/: Server.go  go.mod  go.sum  server.go
gql/: go.mod  go.sum  gqlgen.yml  server.go
gql/DB/: database.go
gql/graph/: generated.go  schema.graphqls  schema.resolvers.go
gql/graph/model/: models_gen.go
graphqltypes/: type1.graphql
hello/config/: config.exs  dev.exs  test.exs
hello/lib/hello_web/: endpoint.ex  router.ex
hello/lib/hello_web/controllers/: default_controller.ex
