[package]
name = "RestService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "1.0.130", features = ["derive"] } 
env_logger = "0.10.0"
log = "^0.4"
strum_macros = "^0.24"
strum = { version =  "^0.24" , features = ["derive"]}
derive_more = "^0.99"
diesel = {
    version = "2.0.4",
    features = ["postgres,chrono"]
    
    }
dotenv = "0.15.0"
chrono = "^0"
clap = {version = "4.2.7",features = ["yaml"]}


